[package]
name = "webhook-server"
description = "A simple web server to easily execute scripts/executables on incoming requests."
version = "0.1.5-alpha.0"
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/webhook-server"
homepage = "https://github.com/nukesor/webhook-server"
documentation = "https://docs.rs/webhook-server"
license = "MIT"
keywords = ["webhook", "server", "script", "executor", "https"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "webhookserver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.20"
rustls-pemfile = "1"
actix-web = { version = "4", features = ["rustls"] }
handlebars = "4"

dirs = "4"
anyhow = "1"
log = "0.4"
simplelog = "0.12"

pueue-lib = "0.20"

serde = "1"
serde_yaml = "0.9"
serde_derive = "1"
serde_json = "1"

hex = "0.4"
hmac = "0.12"
sha-1 = "0.10"
base64 = "0.13"
