[package]
name = "webhook-server"
description = "A simple web server to easily execute scripts/executables on incoming requests."
version = "0.1.5-alpha.0"
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/webhook-server"
homepage = "https://github.com/nukesor/webhook-server"
documentation = "https://docs.rs/webhook-server"
license = "MIT"
keywords = ["executor", "https", "script", "server", "webhook"]
readme = "README.md"
edition = "2024"

[[bin]]
name = "webhookserver"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
base64 = "0.22"
color-eyre = "0.6.5"
dirs = "6"
handlebars = "6"
hex = "0.4"
hmac = "0.12"
# pueue-lib = { version = "0.28.1", features = ["client"] }
pueue-lib = { git = "https://github.com/Nukesor/pueue", version = "0.29", features = [
    "client",
] }
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha-1 = "0.10"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "fmt",
    "local-time",
] }
